--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,2 +1,20 @@
 <h1>Lasagna</h1>
 <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F39268.jpg&w=958&h=641&c=sc&poi=face&q=85">\
+<h2>Description</h2>
+<p>This is a faster, and less expensive lasagna.</p>
+<h2>Ingredients</h2>
+<ul>
+    <li>Package Lasagna Noodle</li>
+    <li>Lean Ground Beef</li>
+    <li>Salt and Pepper</li>
+    <li>Spaghetti Sauce</li>
+    <li>1 Garlic Clove</li>
+    <li>Cheddar Cheese</li>
+</ul>
+<h2>Steps</h2>
+<ol>
+    <li>Bring a large pot of lightly salted water to a boil. Add pasta and cook for 8 to 10 minutes or until al dente; drain.</li>
+    <li>Preheat oven to 350 degrees F (175 degrees C). In a large skillet over medium-high heat, brown beef and season with salt and pepper; drain. Stir in spaghetti sauce and garlic and simmer 5 minutes.</li>
+    <li>In a medium bowl, combine mozzarella, Cheddar and ricotta; stir well. In 9x13 inch pan, alternate layers of noodles, meat mixture and cheese mixture until pan is filled.</li>
+    <li>Bake in preheated oven for 30 minutes, or until cheese is melted and bubbly.</li>  
+</ol>
