--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h1>Odin Recipes</h1>
-<a hrf="https://www.allrecipes.com/recipe/19756/brendas-lasagna/">Lasagna</a>
+<a href="https://www.allrecipes.com/recipe/19756/brendas-lasagna/">Lasagna</a>
